# Minecraft-Wiki-MCP

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
src/: server.ts
src/config/: constants.ts
src/minecraft_wiki_mcp/: __init__.py  models.py  server.py  wiki_client.py
src/services/: api.service.ts  wiki.service.ts
src/types/: guards.ts  tools.ts
src/utils/: recipe-extractor.ts  utils.ts
