[project]
name = "minecraft-wiki-mcp"
version = "2.0.0"
description = "MCP Server for browsing the official Minecraft Wiki"
readme = "README.md"
license = "ISC"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.27,<2",
    "httpx>=0.28",
    "minecraft-wiki-mdifier",
]

[project.scripts]
minecraft-wiki-mcp = "minecraft_wiki_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/minecraft_wiki_mcp"]
